--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -29,14 +29,15 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:layout_gravity="center_vertical"
                     android:fontFamily="@font/special_gothic_expanded_bold"
-                    android:text="PUSH-UPS"
+                    android:text="@string/top_bar_title"
                     android:textColor="@color/black"
                     android:textSize="24sp" />
 
                 <ImageButton
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
                     android:layout_gravity="center_vertical|end"
                     android:background="@android:color/transparent"
                     android:contentDescription="@string/settings"
@@ -57,7 +58,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
-                    android:padding="16dp">
+                    android:padding="16dp"
+                    tools:ignore="UseCompoundDrawables">
 
                     <ImageView
                         android:layout_width="24dp"
@@ -66,19 +68,16 @@
                         android:src="@drawable/ai_icon"
                         app:tint="@color/black"/>
 
-                    <EditText
+                    <TextView
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
                         android:layout_weight="1"
-                        android:background="@android:color/transparent"
-                        android:fontFamily="@font/special_gothic_medium"
-                        android:hint="@string/ask_ai_bar_hint"
-                        android:importantForAutofill="no"
-                        android:inputType="text"
+                        android:fontFamily="@font/special_gothic_expanded_regular"
+                        android:text="@string/ask_ai_bar_hint"
                         android:paddingHorizontal="16dp"
-                        android:textColor="@color/black"
-                        android:textColorHint="@color/light_grey" />
+                        android:textColor="@color/light_grey"
+                        tools:ignore="TextContrastCheck" />
 
                 </LinearLayout>
 
@@ -113,7 +112,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/special_gothic_expanded_bold"
-                            android:text="46"
+                            android:text="@string/total_push_ups_today_count"
                             android:textColor="@color/black"
                             android:textSize="72sp" />
 
@@ -121,7 +120,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/special_gothic_expanded_semibold"
-                            android:text="total push-ups\ntoday"
+                            android:text="@string/total_push_ups_today"
                             android:textColor="@color/grey"
                             android:textSize="16sp" />
 
@@ -150,7 +149,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/special_gothic_expanded_semibold"
-                            android:text="125"
+                            android:text="@string/this_week_count"
                             android:textColor="@color/black"
                             android:textSize="16sp" />
 
@@ -158,9 +157,10 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/special_gothic_expanded_medium"
-                            android:text="this week"
+                            android:text="@string/this_week"
                             android:textColor="@color/grey"
-                            android:textSize="10sp" />
+                            android:textSize="11sp"
+                            tools:ignore="TextContrastCheck" />
 
                     </LinearLayout>
 
@@ -189,7 +189,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/special_gothic_expanded_semibold"
-                            android:text="525"
+                            android:text="@string/this_month_count"
                             android:textColor="@color/black"
                             android:textSize="16sp" />
 
@@ -197,9 +197,10 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/special_gothic_expanded_medium"
-                            android:text="this month"
+                            android:text="@string/this_month"
                             android:textColor="@color/grey"
-                            android:textSize="10sp" />
+                            android:textSize="11sp"
+                            tools:ignore="TextContrastCheck" />
 
                     </LinearLayout>
 
@@ -229,7 +230,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/special_gothic_expanded_semibold"
-                            android:text="2.54k"
+                            android:text="@string/so_far_count"
                             android:textColor="@color/black"
                             android:textSize="16sp" />
 
@@ -237,9 +238,10 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/special_gothic_expanded_medium"
-                            android:text="so far"
+                            android:text="@string/so_far"
                             android:textColor="@color/grey"
-                            android:textSize="10sp" />
+                            android:textSize="11sp"
+                            tools:ignore="TextContrastCheck" />
 
                     </LinearLayout>
 
@@ -258,7 +260,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:fontFamily="@font/special_gothic_expanded_bold"
-                    android:text="this month"
+                    android:text="@string/this_month"
                     android:textColor="@color/black"
                     android:textSize="20sp" />
 
@@ -266,6 +268,7 @@
                     android:layout_width="24dp"
                     android:layout_height="24dp"
                     android:layout_gravity="center_vertical|end"
+                    android:contentDescription="@string/current_streak_text"
                     android:src="@drawable/fire_primary"
                     app:tint="@color/black" />
 
@@ -273,7 +276,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/special_gothic_expanded_bold"
-                    android:text="11"
+                    android:text="@string/current_streak_number"
                     android:textColor="@color/black"
                     android:textSize="20sp" />
 
@@ -317,21 +320,24 @@
                             android:layout_height="wrap_content"
                             android:orientation="horizontal"
                             android:layout_weight="1"
-                            android:gravity="center">
+                            android:gravity="center"
+                            tools:ignore="UseCompoundDrawables">
 
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:fontFamily="@font/special_gothic_expanded_regular"
-                                android:text="current - 11"
+                                android:text="@string/current_streak_text"
                                 android:textColor="@color/black"
                                 android:textSize="14sp" />
 
                             <ImageView
                                 android:layout_width="24dp"
                                 android:layout_height="24dp"
+                                android:importantForAccessibility="no"
                                 android:src="@drawable/fire_secondary"
-                                app:tint="@color/primary" />
+                                app:tint="@color/primary"
+                                tools:ignore="ImageContrastCheck" />
                         </LinearLayout>
 
 
@@ -340,21 +346,24 @@
                             android:layout_height="wrap_content"
                             android:orientation="horizontal"
                             android:layout_weight="1"
-                            android:gravity="center">
+                            android:gravity="center"
+                            tools:ignore="UseCompoundDrawables">
 
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:fontFamily="@font/special_gothic_expanded_regular"
-                                android:text="highest - 26"
+                                android:text="@string/highest_streak_text"
                                 android:textColor="@color/black"
                                 android:textSize="14sp" />
 
                             <ImageView
                                 android:layout_width="24dp"
                                 android:layout_height="24dp"
+                                android:importantForAccessibility="no"
                                 android:src="@drawable/fire_secondary"
-                                app:tint="@color/primary" />
+                                app:tint="@color/primary"
+                                tools:ignore="ImageContrastCheck" />
                         </LinearLayout>
 
                     </LinearLayout>
@@ -374,7 +383,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:fontFamily="@font/special_gothic_expanded_bold"
-                    android:text="leaderboard"
+                    android:text="@string/leaderboard"
                     android:textColor="@color/black"
                     android:textSize="20sp" />
 
@@ -383,7 +392,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:fontFamily="@font/special_gothic_semibold"
-                    android:text="View More"
+                    android:text="@string/view_more"
                     android:textColor="@color/black"
                     android:textSize="12sp"
                     app:tint="@color/black" />
@@ -422,7 +431,7 @@
                             android:layout_weight="1"
                             android:fontFamily="@font/special_gothic_semibold"
                             android:paddingHorizontal="11dp"
-                            android:text="Davian Allen"
+                            android:text="@string/person_name_1"
                             android:textColor="@color/dark_grey"
                             android:textSize="16sp" />
 
@@ -431,7 +440,7 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_vertical"
                             android:fontFamily="@font/special_gothic_expanded_semibold"
-                            android:text="12,523"
+                            android:text="@string/score_1"
                             android:textColor="@color/dark_grey_85"
                             android:textSize="16sp" />
 
@@ -455,7 +464,7 @@
                             android:layout_weight="1"
                             android:fontFamily="@font/special_gothic_semibold"
                             android:paddingHorizontal="11dp"
-                            android:text="Isaac Osborne"
+                            android:text="@string/person_name_2"
                             android:textColor="@color/dark_grey"
                             android:textSize="16sp" />
 
@@ -464,7 +473,7 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_vertical"
                             android:fontFamily="@font/special_gothic_expanded_semibold"
-                            android:text="4,607"
+                            android:text="@string/score_2"
                             android:textColor="@color/dark_grey_85"
                             android:textSize="16sp" />
 
@@ -487,7 +496,7 @@
                             android:layout_weight="1"
                             android:fontFamily="@font/special_gothic_semibold"
                             android:paddingHorizontal="11dp"
-                            android:text="Tobias Huber"
+                            android:text="@string/person_name_3"
                             android:textColor="@color/dark_grey"
                             android:textSize="16sp" />
 
@@ -496,7 +505,7 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_vertical"
                             android:fontFamily="@font/special_gothic_expanded_semibold"
-                            android:text="3,245"
+                            android:text="@string/score_3"
                             android:textColor="@color/dark_grey_85"
                             android:textSize="16sp" />
 
@@ -518,7 +527,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:fontFamily="@font/special_gothic_expanded_bold"
-                    android:text="global push-ups"
+                    android:text="@string/global_push_ups"
                     android:textColor="@color/black"
                     android:textSize="20sp" />
 
@@ -526,6 +535,7 @@
                     android:layout_width="24dp"
                     android:layout_height="24dp"
                     android:layout_gravity="center_vertical|end"
+                    android:contentDescription="@string/global_push_ups"
                     android:src="@drawable/global"
                     app:tint="@color/black" />
 
@@ -550,7 +560,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
                         android:fontFamily="@font/special_gothic_expanded_bold"
-                        android:text="240,846"
+                        android:text="@string/global_push_ups_count"
                         android:textColor="@color/black"
                         android:textSize="40sp" />
 
@@ -563,12 +573,13 @@
     </androidx.core.widget.NestedScrollView>
 
     <Button
+        android:id="@+id/startButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="32dp"
-        android:backgroundTint="@color/dark_grey"
+        android:backgroundTint="@color/primary"
         android:fontFamily="@font/special_gothic_expanded_semibold"
-        android:text="Start"
+        android:text="@string/start"
         android:textSize="20sp"
         android:textAllCaps="true"
         android:textColor="@color/very_light_grey"
